cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_41.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/record/dtls1_bitmap.c:19: error: DEAD_STORE
  The value written to &v1 (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/ssl/record/dtls1_bitmap.c:19:5: Write of unused value
17.       uint64_t l1, l2;
18.   
19.       n2l8(v1, l1);
          ^
20.       n2l8(v2, l2);
21.   
